style: fix bigram text align

--- a/src/main.css
+++ b/src/main.css
@@ -717,6 +717,7 @@ td .bigramLetter {
   border: 1px solid #000;
   padding: 0;
   display: block;
+  text-align: center;
 }
 #bigramFrequencyAnalysis .substitutionPair .bigramLetter:first-of-type {
   border: none;
